--- a/nodejsBackend/.env
+++ b/nodejsBackend/.env
@@ -1,2 +1,4 @@
 EMAIL_USER=puneethpandith@gmail.com
-EMAIL_PASS=ulip dyqq ohvn nbhm
+EMAIL_PASS=ikcu mbcd crng ahsk
+IMAP_HOST=imap.gmail.com
+IMAP_PORT=993
