--- a/package.json
+++ b/package.json
@@ -11,36 +11,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
+    "@angular/animations": "^18.2.3",
+    "@angular/common": "^18.2.3",
+    "@angular/compiler": "^18.2.3",
+    "@angular/core": "^18.2.3",
+    "@angular/fire": "^18.0.1",
+    "@angular/forms": "^18.2.3",
     "@angular/material": "^17.3.10",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/platform-server": "^17.0.0",
-    "@angular/router": "^17.0.0",
-    "@angular/ssr": "^17.0.8",
+    "@angular/platform-browser": "^18.2.3",
+    "@angular/platform-browser-dynamic": "^18.2.3",
+    "@angular/platform-server": "^18.2.3",
+    "@angular/router": "^18.2.3",
+    "@angular/ssr": "^18.2.3",
     "@vonage/server-sdk": "^3.16.0",
     "axios": "^1.7.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "firebase": "^9.22.0",
+    "firebase": "^9.23.0",
     "imap": "^0.8.19",
     "imap-simple": "^5.1.0",
     "mailparser": "^3.7.1",
     "nodemailer": "^6.9.14",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.7.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.8",
-    "@angular/cli": "^17.0.8",
-    "@angular/compiler-cli": "^17.0.0",
+    "@angular-devkit/build-angular": "^18.2.3",
+    "@angular/cli": "^18.2.3",
+    "@angular/compiler-cli": "^18.2.3",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
@@ -50,7 +51,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.2.2"
+    "typescript": "~5.5.4"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 17.0.8.",
   "main": "index.js",
